# SVMV

./: CMakeLists.txt  README.md
res/models/: TEXTURE_TEST.glb  pyra.gltf  shapes.gltf
res/shaders/: gltf_blinn_phong_frag.glsl  gltf_blinn_phong_vert.glsl  gltf_pbr_frag.glsl  gltf_pbr_vert.glsl  shader.frag  shader.vert
src/SVMV/: Application.cxx  Application.hxx  Attribute.hxx  CameraController.cxx  CameraController.hxx  GLFWwindowWrapper.cxx  GLFWwindowWrapper.hxx  Input.hxx  InputHandler.cxx  InputHandler.hxx  Loader.cxx  Loader.hxx  Material.hxx  Mesh.hxx  Node.hxx  Primitive.cxx  Primitive.hxx  Property.hxx  Scene.hxx  Texture.hxx  VmaUsage.cxx  VulkanAttributeBuffer.cxx  VulkanAttributeBuffer.hxx  VulkanBuffer.cxx  VulkanBuffer.hxx  VulkanDescriptorAllocator.cxx  VulkanDescriptorAllocator.hxx  VulkanDescriptorWriter.cxx  VulkanDescriptorWriter.hxx  VulkanDrawable.cxx  VulkanDrawable.hxx  VulkanDrawableCategory.hxx  VulkanDrawableCollection.hxx  VulkanEngine.hxx  VulkanGLTFPBRMaterial.cxx  VulkanGLTFPBRMaterial.hxx  VulkanIBL.cxx  VulkanIBL.hxx  VulkanImage.cxx  VulkanImage.hxx  (+19 more)
